--- a/source/sass/blocks/wrapper.scss
+++ b/source/sass/blocks/wrapper.scss
@@ -4,3 +4,10 @@
   justify-content: space-between;
   min-height: 100vh;
 }
+
+.wrapper--welcome {
+  position: relative;
+
+  background: #3b5381 url("../../img/bg-mobile.jpg") no-repeat center;
+  background-size: cover;
+}
