Стилизует шапку на мобильных версиях страниц

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,10 +4,14 @@
 @import "settings";
 
 @import "blocks/wrapper";
+@import "blocks/page-header";
+@import "blocks/nav";
 @import "blocks/button";
 @import "blocks/auth";
 @import "blocks/person";
+@import "blocks/section-title";
 @import "blocks/social";
+@import "blocks/scroll";
 @import "blocks/page-content";
 @import "blocks/copyright";
 @import "blocks/page-footer";
