--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,3 +1,5 @@
 $main-font: roboto, Arial, sans-serif;
 $gray-font: #474b57;
 $color-accent: #0649be;
+$color-font: #474b57;
+$color-beige: #f2f0e8;
