--- a/source/sass/blocks/person.scss
+++ b/source/sass/blocks/person.scss
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-right: 10px;
+  padding-left: 10px;
+
+  color: #ffffff;
 }
 
 .person__photo {
