--- a/source/sass/settings.scss
+++ b/source/sass/settings.scss
@@ -19,7 +19,7 @@ html {
   font-size: 14px;
   line-height: 1.7;
   font-family: $main-font;
-  color: #ffffff;
+  color: $color-font;;
 
   -webkit-font-smoothing: antialiased;
 }
