Стилизует страницу blog на мобиле

--- a/source/sass/blocks/section-title.scss
+++ b/source/sass/blocks/section-title.scss
@@ -4,7 +4,7 @@
   font-weight: 400;
   font-size: 35px;
   line-height: 1.2;
-  font-family: "sansus", Arial, sans-serif;
+  font-family: $secondary-font;
   text-align: center;
   color: #ffffff;
   text-transform: uppercase;
