--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,5 +13,6 @@
 @import "blocks/social";
 @import "blocks/scroll";
 @import "blocks/page-content";
+@import "blocks/blog";
 @import "blocks/copyright";
 @import "blocks/page-footer";
