--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,5 +1,6 @@
 $main-font: roboto, Arial, sans-serif;
+$secondary-font: sansus, Arial, sans-serif;
 $gray-font: #474b57;
 $color-accent: #0649be;
 $color-font: #474b57;
-$color-beige: #f2f0e8;
+$color-beige: #f8f9f5;
