Стилизует футер на мобиле

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,5 +14,6 @@
 @import "blocks/scroll";
 @import "blocks/page-content";
 @import "blocks/blog";
+@import "blocks/contacts";
 @import "blocks/copyright";
 @import "blocks/page-footer";
