--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -9,6 +9,40 @@
   }
 }
 
+.nav--footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding-right: 8px;
+  padding-bottom: 16px;
+  padding-left: 8px;
+}
+
+.nav__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 100%;
+  max-width: 500px;
+  margin: 0;
+  padding: 0;
+
+  list-style-type: none;
+}
+
+.nav__item {
+  margin-right: 10px;
+  margin-bottom: 5px;
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
+.nav__link {
+  color: #ffffff;
+}
+
 .nav__toggle {
   position: absolute;
   top: 50%;
