--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,9 +1,46 @@
 .page-footer {
   color: #ffffff;
+
+  background-color: $color-gray;
+
+  &--welcome {
+    background-color: transparent;
+  }
+}
+
+.page-footer__top {
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.page-footer__intro {
+  margin-top: 18px;
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+
+  font-weight: 300;
+  text-align: center;
+
+  border-bottom: 1px solid #65666d;
+}
+
+.page-footer__nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 15px;
+
+  border-bottom: 1px solid #65666d;
+}
+
+.page-footer__socials {
+  width: 150px;
 }
 
 .page-footer__copyright {
+  padding-top: 5px;
   padding-right: 10px;
+  padding-bottom: 5px;
   padding-left: 10px;
 
   background-color: $color-accent;;
