--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,22 +1,34 @@
 .social {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
-  max-width: 186px;
+  justify-content: space-around;
+  max-width: 100%;
   margin: 0;
   padding: 0;
 
-  list-style-type: none;;
+  list-style-type: none;
 }
 
 .social__item {
-  margin-right: 27px;
+  margin-right: 5px;
+  margin-bottom: 5px;
 
   &:last-child {
     margin-right: 0;
   }
 }
 
+.social__link {
+  display: block;
+  width: 31px;
+  height: 22px;
+}
+
 .social__icon {
-  fill: $color-accent;
+  width: 100%;
+  height: 100%;
+
+  opacity: 0.5;
+
+  fill: #ffffff;
 }
