Стилизует секцию навыков на мобиле

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,7 @@
 @import "settings";
 
 @import "blocks/wrapper";
+@import "blocks/content-title";
 @import "blocks/page-header";
 @import "blocks/nav";
 @import "blocks/button";
@@ -13,6 +14,10 @@
 @import "blocks/social";
 @import "blocks/scroll";
 @import "blocks/page-content";
+@import "blocks/about";
+@import "blocks/skills";
+@import "blocks/skill";
+@import "blocks/circles";
 @import "blocks/blog";
 @import "blocks/contacts";
 @import "blocks/copyright";
