Стилизует секцию с картой и контактами на мобиле

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,5 +20,6 @@
 @import "blocks/circles";
 @import "blocks/blog";
 @import "blocks/contacts";
+@import "blocks/map";
 @import "blocks/copyright";
 @import "blocks/page-footer";
