--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -19,7 +19,6 @@
   line-height: 1.3;
   font-family: $secondary-font;
   text-align: center;
-  color: #474b57;
   text-transform: uppercase;
 
   &::after {
@@ -31,7 +30,7 @@
     width: 56px;
     height: 3px;
 
-    background-color: #474b57;
+    background-color: rgba($gray-font, 0.5);
     transform: translateX(-50%);
   }
 }
