--- a/source/sass/blocks/skills.scss
+++ b/source/sass/blocks/skills.scss
@@ -1,6 +1,8 @@
 .skills {
   display: flex;
   flex-direction: column;
+
+  background-color: #f4f5f0;
 }
 
 .skills__title {
@@ -17,7 +19,6 @@
   line-height: 1.3;
   font-family: $secondary-font;
   text-align: center;
-  color: #474b57;
   text-transform: uppercase;
 
   &::after {
@@ -29,7 +30,7 @@
     width: 56px;
     height: 3px;
 
-    background-color: #474b57;
+    background-color: rgba($gray-font, 0.5);
     transform: translateX(-50%);
   }
 }
