--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,5 +3,5 @@ $secondary-font: sansus, Arial, sans-serif;
 $gray-font: #474b57;
 $color-accent: #0649be;
 $color-font: #474b57;
-$color-beige: #f8f9f5;
+$color-beige: #f2f0e8;
 $color-gray: #3e4049;
