--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,5 +21,7 @@
 @import "blocks/blog";
 @import "blocks/contacts";
 @import "blocks/map";
+@import "blocks/slider";
+@import "blocks/controls";
 @import "blocks/copyright";
 @import "blocks/page-footer";
