--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,5 +23,8 @@
 @import "blocks/map";
 @import "blocks/slider";
 @import "blocks/controls";
+@import "blocks/reviews";
+@import "blocks/feedback";
+@import "blocks/form";
 @import "blocks/copyright";
 @import "blocks/page-footer";
