--- a/source/sass/blocks/wrapper.scss
+++ b/source/sass/blocks/wrapper.scss
@@ -8,6 +8,6 @@
 }
 
 .wrapper--welcome {
-  background: #3b5381 url("../../img/bg-mobile.jpg") no-repeat center;
+  background: #3b5381 url("../../img/header-bg.jpg") no-repeat center;
   background-size: cover;
 }
