--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -5,3 +5,5 @@ $color-accent: #0649be;
 $color-font: #474b57;
 $color-beige: #f2f0e8;
 $color-gray: #3e4049;
+$tablet-width: 768px;
+$desktop-width: 1300px;
