--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -7,7 +7,7 @@
   height: 100vh;
   min-height: 650px;
 
-  background: #3b5381 url("../../img/header-bg-mobile.png") no-repeat top;
+  background: #3b5381 url("../../img/header-bg.jpg") no-repeat top;
   background-size: cover;
 }
 
