--- a/source/sass/blocks/section-title.scss
+++ b/source/sass/blocks/section-title.scss
@@ -14,3 +14,10 @@
   margin: 0;
   margin-top: 8px;
 }
+
+@media (min-width: $tablet-width) {
+  .section-title__header {
+    font-size: 49px;
+    line-height: 1.06;
+  }
+}
