--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -84,6 +84,36 @@
 }
 
 @media (min-width: $tablet-width) {
+  .contacts {
+    position: relative;
+
+    height: 680px;
+  }
+
+  .contacts__wrapper {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    width: 350px;
+    padding: 30px 20px;
+
+    background: rgba(#ffffff, 0.7);
+    transform: translate(-50%, -50%);
+  }
+
+  .contacts__title {
+    margin-top: 0;
+
+    &::after {
+      width: 90px;
+    }
+  }
+
+  .contacts__item {
+    margin-bottom: 20px;
+  }
+
   .contacts--footer {
     .contacts__item {
       text-align: right;
