--- a/source/sass/blocks/person.scss
+++ b/source/sass/blocks/person.scss
@@ -29,3 +29,18 @@
 .person__description {
   margin: 0;
 }
+
+@media (min-width: $tablet-width) {
+  .person--content-page {
+    .person__name {
+      margin-bottom: 0;
+
+      font-size: 35px;
+    }
+
+    .person__description {
+      font-size: 16px;
+      line-height: 1.5;
+    }
+  }
+}
