--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -42,7 +42,6 @@
 
 .reviews__author-photo {
   width: 50px;
-  height: 50px;
   overflow: hidden;
 
   border-radius: 50%;
@@ -64,4 +63,33 @@
   left: 50%;
 
   transform: translateX(-50%);
+}
+
+@media (min-width: $tablet-width) {
+  .reviews__inner {
+    padding-right: 23px;
+    padding-bottom: 135px;
+    padding-left: 23px;
+  }
+
+  .reviews__list {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .reviews__item {
+    width: 350px;
+  }
+
+  .reviews__author-photo {
+    width: 77px;
+  }
+
+  .reviews__text {
+    margin-bottom: 10px;
+  }
+
+  .reviews__author-name {
+    margin-top: 0;
+  }
 }
