Адаптирует страницу index под десктоп

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -51,6 +51,7 @@
 
 @media (min-width: $tablet-width) {
   .button--auth {
+    top: 20px;
     right: 20px;
     left: initial;
 
@@ -59,5 +60,11 @@
 
   .button--slider {
     font-size: 16px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .button--auth {
+    top: 24px;
   }
 }
