--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,4 +6,5 @@ $color-font: #474b57;
 $color-beige: #f2f0e8;
 $color-gray: #3e4049;
 $tablet-width: 768px;
-$desktop-width: 1300px;
+$desktop-width: 1200px;
+$desktop-width-wide: 1800px;
