--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -4,6 +4,61 @@
   padding-left: 10px;
 }
 
+.blog__menu {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 50;
+
+  display: flex;
+  align-items: center;
+  width: 275px;
+  max-width: calc(100% - 45px);
+  height: 100%;
+
+  background: #253468;
+
+  transition: transformX, 0.3s ease;
+
+  &--closed {
+    box-shadow: none;
+    transform: translateX(-100%);
+  }
+
+  &--opened {
+    box-shadow: 3px 0 3px 0 rgba(0, 0, 0, 0.2);
+    transform: translateX(0);
+  }
+}
+
+.blog__menu-button {
+  position: absolute;
+  left: 100%;
+
+  width: 36px;
+  height: 42px;
+  margin-top: auto;
+  margin-bottom: auto;
+
+  background: transparent;
+  border: none;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -30px;
+    z-index: -1;
+
+    width: 40px;
+    height: 100%;
+
+    background: #253468;
+    border-radius: 50%;
+  }
+}
+
 .blog__article {
   margin-bottom: 27px;
   padding-bottom: 10px;
@@ -40,5 +95,31 @@
   .blog__article-title {
     font-size: 30px;
     line-height: 1.2;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .blog {
+    display: flex;
+
+    background-color: #faf8f0;
+  }
+
+  .blog__menu {
+    position: static;
+
+    width: 26%;
+    margin-right: 100px;
+
+    background-color: #faf8f0;
+    transform: initial;
+  }
+
+  .blog__menu-button {
+    display: none;
+  }
+
+  .blog__content {
+    width: 57%;
   }
 }
