--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,6 +19,7 @@
 @import "blocks/skill";
 @import "blocks/circles";
 @import "blocks/blog";
+@import "blocks/blog-nav";
 @import "blocks/contacts";
 @import "blocks/map";
 @import "blocks/slider";
