--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -74,11 +74,14 @@
 
   .reviews__list {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
   .reviews__item {
-    width: 350px;
+    width: 360px;
+    padding-right: 20px;
+    padding-left: 20px;
   }
 
   .reviews__author-photo {
@@ -90,6 +93,36 @@
   }
 
   .reviews__author-name {
-    margin-top: 0;
+    margin-top: auto;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .reviews__wrapper {
+    width: $desktop-width;
+    margin: 0 auto;
+  }
+
+  .reviews__inner {
+    padding-top: 60px;
+    padding-bottom: 155px;
+  }
+
+  .reviews__title {
+    font-size: 63px;
+    line-height: 1;
+  }
+
+  .reviews__text {
+    font-size: 16px;
+    line-height: 1.6;
+  }
+
+  .reviews__author-name {
+    font-size: 16px;
+  }
+
+  .reviews__scroll {
+    bottom: 70px;
   }
 }
