--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -31,6 +31,7 @@
   line-height: 1.3;
   font-family: $secondary-font;
   text-align: center;
+  text-transform: uppercase;
 
   &::after {
     content: "";
@@ -74,5 +75,45 @@
 
   .slider__technologies {
     font-size: 16px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .slider {
+    flex-wrap: wrap;
+    align-items: flex-start;
+    height: 100vh;
+  }
+
+  .slider__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    order: -1;
+    width: 50%;
+    height: 100%;;
+  }
+
+  .slider__title {
+    font-size: 35px;
+    line-height: 1.1;
+
+    &::after {
+      width: 90px;
+    }
+  }
+
+  .slider__technologies {
+    margin-bottom: 55px;
+  }
+
+  .slider__display {
+    width: 50%;
+    height: 70%;;
+  }
+
+  .slider__controls {
+    width: 50%;
+    height: 30%;
   }
 }
