Адаптирует страницу about под десктоп

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -105,6 +105,9 @@
   .contacts__title {
     margin-top: 0;
 
+    font-size: 30px;
+    line-height: 1.37;
+
     &::after {
       width: 90px;
     }
@@ -120,6 +123,36 @@
 }
 
 @media (min-width: $desktop-width) {
+  .contacts {
+    width: 100%;
+  }
+
+  .contacts__wrapper {
+    width: 580px;
+  }
+
+  .contacts__title {
+    margin-bottom: 30px;
+
+    font-size: 35px;
+    line-height: 1.1;
+  }
+
+  .contacts__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .contacts__item {
+    width: 270px;
+  }
+
+  .contacts__icon {
+    width: 45px;
+    height: 45px;
+  }
+
   .contacts--footer .contacts__item {
     text-align-last: left;
   }
