--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -47,7 +47,7 @@
 
 @media (min-width: $tablet-width) {
   .about__info {
-    max-width: 500px;
+    max-width: 700px;
     margin-right: auto;
     margin-left: auto;
     padding-right: 23px;
@@ -65,5 +65,28 @@
 
       background-color: #393e42;
     }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .about {
+    width: 50%;
+    padding-bottom: 10px;
+  }
+
+  .about__title {
+    margin-bottom: 28px;
+    padding-bottom: 25px;
+
+    font-size: 35px;
+    line-height: 1.1;
+  }
+
+  .about__info {
+    max-width: 445px;
+    margin-top: 0;
+    margin-bottom: 17px;
+
+    font-size: 16px;
   }
 }
