--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -63,7 +63,7 @@
   }
 
   .page-footer__socials {
-    width: auto;;
+    width: auto;
   }
 
   .page-footer__contacts {
@@ -115,5 +115,11 @@
     padding-left: 30px;
 
     font-size: 16px;
+  }
+}
+
+@media (min-width: $desktop-width-wide) {
+  .page-footer__socials {
+    margin-top: 0;
   }
 }
