--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -90,3 +90,18 @@
     font-size: 16px;
   }
 }
+
+@media (min-width: $desktop-width-wide) {
+  .about {
+    flex-direction: row;
+    justify-content: flex-end;
+  }
+
+  .about__header {
+    margin-right: 30px;
+  }
+
+  .about__content {
+    padding-top: 26px;
+  }
+}
