--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,6 +14,7 @@
 @import "blocks/social";
 @import "blocks/scroll";
 @import "blocks/page-content";
+@import "blocks/triangles";
 @import "blocks/about";
 @import "blocks/skills";
 @import "blocks/skill";
