--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -72,6 +72,11 @@
     padding-left: 23px;
   }
 
+  .reviews__title {
+    font-size: 49px;
+    line-height: 1.06;
+  }
+
   .reviews__list {
     display: flex;
     flex-wrap: wrap;
