--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -5,6 +5,14 @@
   background-color: $color-beige;
 }
 
+.about__header {
+  position: relative;
+  z-index: 10;
+
+  display: flex;
+  justify-content: center;
+}
+
 .about__photo {
   width: 320px;
   margin: 0 auto;
@@ -46,6 +54,12 @@
 }
 
 @media (min-width: $tablet-width) {
+  .about__header {
+    max-width: 400px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
   .about__info {
     max-width: 700px;
     margin-right: auto;
