--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,6 +15,7 @@
 @import "blocks/scroll";
 @import "blocks/page-content";
 @import "blocks/triangles";
+@import "blocks/title-bg";
 @import "blocks/about";
 @import "blocks/skills";
 @import "blocks/skill";
