--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,6 +9,12 @@
 @import "blocks/nav";
 @import "blocks/button";
 @import "blocks/auth";
+@import "blocks/login";
+@import "blocks/login-form";
+@import "blocks/login-checkbox";
+@import "blocks/login-radio";
+@import "blocks/flip-container";
+@import "blocks/flipper";
 @import "blocks/person";
 @import "blocks/section-title";
 @import "blocks/social";
