--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,6 +3,7 @@ $secondary-font: sansus, Arial, sans-serif;
 $gray-font: #474b57;
 $color-accent: #0649be;
 $color-font: #474b57;
+$color-red: #e44845;
 $color-beige: #f2f0e8;
 $color-gray: #3e4049;
 $mobile-width-only: 767px;
