--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -22,6 +22,14 @@
   display: block;
   width: 31px;
   height: 22px;
+
+  &:hover {
+    .social__icon {
+      opacity: 1;
+
+      fill: #083c96;
+    }
+  }
 }
 
 .social__icon {
